--- a/CyberAcademy/CyberAcademy.Web/CyberAcademy.Web.csproj
+++ b/CyberAcademy/CyberAcademy.Web/CyberAcademy.Web.csproj
@@ -14,7 +14,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CyberAcademy.Web</RootNamespace>
     <AssemblyName>CyberAcademy.Web</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
     <IISExpressSSLPort />
@@ -24,6 +24,7 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -75,22 +76,21 @@
     <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.Extensions" />
-    <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Web.Razor">
@@ -427,8 +427,13 @@
     <Compile Include="Migrations\201804241028383_InitialModel.Designer.cs">
       <DependentUpon>201804241028383_InitialModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201804251309483_Initial.cs" />
+    <Compile Include="Migrations\201804251309483_Initial.Designer.cs">
+      <DependentUpon>201804251309483_Initial.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Contact.cs" />
+    <Compile Include="Models\IdentityModel.cs" />
     <Compile Include="Models\LoginInfo.cs" />
     <Compile Include="Models\RegisterInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -548,6 +553,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201804241028383_InitialModel.resx">
       <DependentUpon>201804241028383_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804251309483_Initial.resx">
+      <DependentUpon>201804251309483_Initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
